fixed some layout bugs and topFAQ button bug

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -137,12 +137,19 @@ box-shadow: 0 0 1em #071013;
   background-color: rgb(0, 61, 121);
   color: #f1edee;
   padding: 2.5em;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-content: space-between;
   align-items: center;
   text-align: center;
   border-bottom: 0.2em solid #071013;
+}
+
+@media screen and (max-width: 600px) {
+  .header-banner {
+    flex-direction: column;
+  }
 }
 
 .header-banner a {
@@ -362,6 +369,7 @@ nav.navbar.scrolled .nav-links {
   border-radius: 0;
   box-shadow: 0 0 0.5em #071013;
   width: 100%;
+  height: 20vmax; 
   margin: 1em;
 }
 
@@ -773,10 +781,15 @@ nav.navbar.scrolled .nav-links {
 
 .contact-select {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   color: #071013;
 }
+
+@media screen and (max-width: 600px) {
+  .contact-select{
+    flex-direction: column;
+  }}
 
 .contact-group {
   display: flex;
@@ -1214,26 +1227,26 @@ nav.navbar.scrolled .nav-links {
 
 
 
-.faq-content::-webkit-scrollbar {
+.faq-content section::-webkit-scrollbar {
   width: 0.75em;
   border-radius: 2em;
 }
 
 /* Track */
-.faq-content::-webkit-scrollbar-track {
+.faq-content section::-webkit-scrollbar-track {
   background: transparent;
   border-radius: 2em;
 }
 
 /* Handle */
-.faq-content::-webkit-scrollbar-thumb {
+.faq-content section::-webkit-scrollbar-thumb {
   background: #f1edee;
   border: .1em solid #036;
   border-radius: 2em;
 }
 
 /* Handle on hover */
-.faq-content::-webkit-scrollbar-thumb:hover {
+.faq-content section::-webkit-scrollbar-thumb:hover {
   background: #0710139b;
   border-radius: 2em;
 }
@@ -1705,32 +1718,36 @@ nav.navbar.scrolled .nav-links {
   border-top: #071013 solid 0.25em;
 }
 
-.footer-nav {
+.footer .footer-nav {
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   justify-self: center;
   align-self: center;
 }
 
-.footer-nav a {
+.footer-nav .footer-links{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.footer-links a {
+  margin: 1em;
   color: #cecece;
   text-decoration: none;
-  margin-right: 0.5em;
   font-size: 3.5vmin;
 }
 
-.footer-nav a:hover {
+.footer-links a:hover {
   color: #f1edee;
   text-decoration: none;
 }
 
-.footer-nav img {
-  width: 8em;
-  border-radius: 4em;
-}
-
-.footer-nav span {
-  display: flex;
-  align-items: center;
+.footer-logo img {
+  width: 15vmax;
+  border-radius: 10em;
 }
 
 .footer-text {
@@ -1738,7 +1755,7 @@ nav.navbar.scrolled .nav-links {
   flex-direction: column;
   justify-content: center;
   align-self: center;
-  margin: 2vmax 0 2vmax 3.5vmax;
+  margin: 2vmax 3.5vmax 2vmax 3.5vmax;
 }
 
 .footer-text * {
@@ -1758,7 +1775,7 @@ nav.navbar.scrolled .nav-links {
 }
 
 .footer-copy {
-  margin: 1em 2em 1em 0;
+  margin: 1em 2em 1em 2em;
   font-size: 0.75em;
   color: rgba(82, 82, 82, 0.563);
 }
